Change log
==========

3.3 (unreleased)
----------------


3.2 (2019-04-14)
----------------

- expanded test coverage

- Added support for 0 -> N
  (see https://en.wikipedia.org/wiki/Roman_numerals#Zero)

- Added support for Python 3.8


3.1 (2018-10-24)
----------------

- Added support for Python 3.7.


3.0 (2018-05-28)
----------------

- Added support for Python 3.5, 3.6 and PyPy3.

- Dropped support for Python 2.6 and 3.3.


2.0.0 (2013-02-25)
------------------

- Added Python 3.3 and PyPy support.

- Added tests.


1.4.0 (2009-07-23)
------------------

- Initial PyPI release.